<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) by MinterTeam. 2018
  ~ @link <a href="https://github.com/MinterTeam">Org Github</a>
  ~ @link <a href="https://github.com/edwardstock">Maintainer Github</a>
  ~
  ~ The MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".advanced.ui.AdvancedGenerateActivity"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?android:attr/actionBarSize"
            android:theme="@style/WalletPrimaryToolbar"
            app:layout_collapseMode="none"
            app:navigationIcon="@drawable/ic_arrow_back_white_compat"
            app:title="@string/title_advanced_generate"
            app:titleTextColor="@android:color/white"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_edges"
                android:layout_marginTop="@dimen/margin_edges_medium"
                android:layout_marginEnd="@dimen/margin_edges"
                android:text="@string/advanced_generate_seed_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <View
                android:id="@+id/sep1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_edges_medium"
                android:background="@color/greySeparator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description"
                />

            <TextView
                android:id="@+id/mnemonic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_edges"
                android:layout_marginTop="@dimen/margin_edges_medium"
                android:layout_marginEnd="@dimen/margin_edges_half"
                android:lineSpacingExtra="4dp"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_default"
                android:fontFamily="@font/ubuntu_mono"
                app:layout_constraintEnd_toStartOf="@id/action_copy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sep1"
                tools:text="vague soft expose improve gaze kitten pass point select access battle wish"
                />

            <TextView
                android:id="@+id/action_copy"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/btn_copy"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/sep2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/mnemonic"
                app:layout_constraintTop_toBottomOf="@id/sep1"
                />

            <View
                android:id="@+id/sep2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_edges_medium"
                android:background="@color/greySeparator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mnemonic"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/row_secured_by"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingStart="@dimen/margin_edges"
                android:paddingEnd="0dp"
                android:paddingTop="@dimen/margin_edges"
                android:paddingBottom="@dimen/margin_edges"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sep2"
                >

                <TextView
                    android:id="@+id/secured_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_secured_by"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/secured_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/secured_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_edges_quart"
                    android:text="@string/value_secured_by_wallet"
                    android:textAlignment="viewEnd"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/secured_icon"
                    app:layout_constraintStart_toEndOf="@id/secured_label"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <ImageView
                    android:contentDescription="@string/cd_choose"
                    android:id="@+id/secured_icon"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_edges"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_chevron_right_grey"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/sep3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/greySeparator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/row_secured_by"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/row_save_mnemonic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingStart="@dimen/margin_edges"
                android:paddingEnd="0dp"
                android:paddingTop="@dimen/margin_edges"
                android:paddingBottom="@dimen/margin_edges"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sep3"
                >

                <TextView
                    android:id="@+id/label_save_mnemonic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_ive_saved_mnemonic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <Switch
                    android:id="@+id/switch_save_mnemonic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_edges"
                    android:checked="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/sep4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/greySeparator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/row_save_mnemonic"
                />

            <network.minter.bipwallet.internal.views.widgets.WalletButton
                android:id="@+id/action"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_edges"
                android:layout_marginTop="@dimen/margin_edges_medium"
                android:layout_marginEnd="@dimen/margin_edges"
                android:enabled="false"
                android:text="@string/btn_launch_wallet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sep4"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>