<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) by MinterTeam. 2020
  ~ @link <a href="https://github.com/MinterTeam">Org Github</a>
  ~ @link <a href="https://github.com/edwardstock">Maintainer Github</a>
  ~
  ~ The MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".advanced.ui.AdvancedMainActivity"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?android:attr/actionBarSize"
            android:theme="@style/WalletPrimaryToolbar"
            app:layout_collapseMode="none"
            app:navigationIcon="@drawable/ic_arrow_back_white_compat"
            app:title="@string/title_advanced_main"
            app:titleTextColor="@android:color/white"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <network.minter.bipwallet.internal.views.widgets.WalletButton
                android:id="@+id/action_generate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_edges"
                android:layout_marginTop="@dimen/margin_edges_medium"
                android:layout_marginEnd="@dimen/margin_edges"
                android:text="@string/btn_generate_wallet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Wallet.Button"
                />

            <View
                android:id="@+id/separator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_edges_medium"
                android:background="@color/greySeparator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/action_generate"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingStart="@dimen/margin_edges"
                android:paddingEnd="@dimen/margin_edges"
                android:text="@string/or"
                app:layout_constraintBottom_toBottomOf="@id/separator"
                app:layout_constraintEnd_toEndOf="@id/separator"
                app:layout_constraintStart_toStartOf="@id/separator"
                app:layout_constraintTop_toTopOf="@id/separator"
                app:layout_constraintVertical_bias=".57"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_input_seed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_edges"
                android:layout_marginTop="@dimen/margin_edges_medium"
                android:layout_marginEnd="@dimen/margin_edges"
                android:hint="@string/label_paste_seed_phrase"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/Wallet.Hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/input_seed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textMultiLine"
                    android:textSize="@dimen/text_size_default"
                    tools:text="sun table orange mother"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <network.minter.bipwallet.internal.views.widgets.WalletButton
                android:id="@+id/action_activate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_edges"
                android:layout_marginTop="@dimen/margin_edges_medium"
                android:layout_marginEnd="@dimen/margin_edges"
                android:text="@string/btn_activate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_input_seed"
                />

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_edges"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/action_activate_ledger" />

            <TextView
                android:id="@+id/separator2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingStart="@dimen/margin_edges"
                android:paddingEnd="@dimen/margin_edges"
                android:text="@string/or"
                app:layout_constraintBottom_toBottomOf="@id/separator2"
                app:layout_constraintEnd_toEndOf="@id/separator2"
                app:layout_constraintStart_toStartOf="@id/separator2"
                app:layout_constraintTop_toTopOf="@id/separator2"
                app:layout_constraintVertical_bias=".57" />

            <View
                android:id="@+id/separator2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_edges_medium"
                android:background="@color/greySeparator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/action_activate" />

            <network.minter.bipwallet.internal.views.widgets.WalletButton
                android:id="@+id/action_activate_ledger"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_edges"
                android:layout_marginTop="@dimen/margin_edges_medium"
                android:layout_marginEnd="@dimen/margin_edges"
                android:text="@string/btn_activate_via_ledger"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>