...
    <string name="bip_per_min_label">BIP per minute</string>

    <string name="btn_activate">Activate Wallet</string>
    <string name="btn_add_liquidity">Add Liquidity</string>
    <string name="btn_add_message">Add Message</string>
    <string name="btn_add_wallet">Add New Wallet</string>
    <string name="btn_advanced_mode">Advanced mode</string>
    <string name="btn_all_txs">All Transactions</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_confirm_send">Confirm and Send</string>
    <string name="btn_continue">Continue</string>
...
    <string name="cd_qr_scan">Scan QR code</string>

    <string name="chooser_share_transaction">Share transaction</string>

    <string name="coin_err_not_found">Coin not found</string>

    <string name="copy">Copy</string>

    <string name="day_today">Today</string>

    <string name="decimal_digits">0,1,2,3,4,5,6,7,8,9,.,,</string>

    <string name="deeplink_amount_max_amount_to_spend">Maximum Amount To Spend</string>
...
